test/ui/test/name-resolution/exposure/indirect-cycle.stderr
error: exposure reach ‘topmost.component’ is circular
 --> ${TEST_FOLDER}/name-resolution/exposure/indirect-cycle.lushui:2:10
  |
2 | @(public component) data Center: Type of
  |          ^^^^^^^^^
  |

error: aborting due to previous error

